@@ -9,6 +9,7 @@ bulk2
 bulk3
 bulk4
 bulk5
+bulk6
 ChangeLog
 cluster1
 CMakeCache.txt
