@@ -454,8 +454,9 @@ mongoc_bulk_operation_execute (mongoc_bulk_operation_t *bulk,  /* IN */
 
 cleanup:
    ret = _mongoc_write_result_complete (&bulk->result,
-                                        reply,
                                         bulk->client->error_api_version,
+                                        bulk->write_concern,
+                                        reply,
                                         error);
    mongoc_server_stream_cleanup (server_stream);
 
